--- a/experience/index.html
+++ b/experience/index.html
@@ -37,55 +37,19 @@
 
   <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
   <div class="quote">
-      <span>every experience in your life is being orchestrated to teach you something you need to know to move forward.</span>
+      <span>“Think like a queen. A queen is not afraid to fail. Failure is another stepping stone to greatness.” — Oprah Winfrey.</span>
   </div>
 
   <div class="timeline">
 
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Self Employed</h2>
-        </div>
-        <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>DevIncept (Top Contributor)</h2>
-          </div>
-          <div class="desc">
-              <h3>DCP 2021 Contributor | Open Source Program</h3>
-              <p>July 2021 - October 2021</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>LetsGrowMore Summer of Code</h2>
-          </div>
-          <div class="desc">
-              <h3>LGM-SOC'21 Participant | Open Source Program</h3>
-              <p>June 2021 - August 2021</p>
-          </div>
-        </div>
-      </div>
-
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>PT JALA Akuakultur Lestari Alamku</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>Mobile Engineer</h3>
+            <p>Sep 2024 - present</p>
         </div>
       </div>
     </div>
@@ -93,23 +57,24 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Rumah BUMN Yogyakarta</h2>
         </div>
         <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+            <h3>Graphic Designer</h3>
+            <p>Mar 2024 - Jul 2024</p>
         </div>
       </div>
     </div>
 
+
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Bangkit Academy 2024</h2>
         </div>
         <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
+            <h3>Android Developer</h3>
+            <p>Feb 2024 - Jun 2024</p>
         </div>
       </div>
     </div>
@@ -117,38 +82,16 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Frshr Technologies</h2>
+          <h2>PT Gerbang Inovasi Spasial (Giszilla)</h2>
         </div>
         <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
+            <h3>GIS Web Development | Internship</h3>
+            <p>Jan 2023 - Feb 2023</p>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>WonderingBlog</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>Hacktoberfest 2020</h2>
-          </div>
-          <div class="desc">
-              <h3>Contributor | Open Source Program</h3>
-              <p>October 2020 - November 2020</p>
-          </div>
-        </div>
-      </div>
 
   </div>
 
@@ -191,7 +134,7 @@
 
             <a href="https://www.linkedin.com/in/putri-saynata-319544221/" class="fab fa-linkedin" target="_blank"></a>
             <a href="https://github.com/PutriSaynata/web-portofolio" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:saynataputri@gmail.com" class="fas fa-envelope" target="_blank"></a>
+            <a href="mailto:putricsay@gmail.com" class="fas fa-envelope" target="_blank"></a>
           </div>
       </div>
   </div>
